2008-01-07  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Frederic Crozat
	<fcrozat@mandriva.com> to add LZMA archives (Closes: #13256)

=== shared-mime-info 0.23 ===

2007-12-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.23
	* Makefile.am: add HACKING file to the dist
	* HACKING: add location for the CVS server and release method

2007-12-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix capitalisation for
	a number of mime-types, don't use "QT", "WMV/WMA" and "NSV"
	in comments

	Remove the useless gtar, make application/x-gtar an
	alias for tar

	Add translator comment for SNES/NES/Genesis, as those
	were known under different names depending on the location/region

	Mention the acronyms in the raw digital image types

	Add an acronym for RPM

2007-12-12  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: add the pot file to the dist,
	should fix problems with the translation project

2007-12-10  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/office.doc: 
	Remove the magic from the Powerpoint files,
	it's actually magic for "Microsoft Office document"
	and add it to x-ole-storage, add a test file to the
	testsuite
	From https://bugzilla.redhat.com/show_bug.cgi?id=398031

2007-11-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/subtitle.ssa:
	Add the SSA subtitle format

2007-11-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/subtitle-microdvd.sub:
	* tests/subtitle-mpsub.sub:
	Add MicroDVD and MPSub subtitle formats

2007-11-29  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add SAMI subtitle files, as per:
	http://msdn2.microsoft.com/en-us/library/ms971327.aspx
	* tests/: add test copied from the Microsoft website

2007-11-21  Bastien Nocera  <hadess@hadess.net>

	* README: Update bug reporting instructions
