@@ -1,3 +1,9 @@
+2008-01-29  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Patch from Paolo Borelli
+	<pborelli@katamail.com> to add the Eiffel code mime-type
+	(Closes: #14288)
+
 2008-01-07  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Patch from Frederic Crozat
